--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -38,9 +38,14 @@
     %ul.nav.navbar-nav.side-nav
       - if current_user.try(:admin?)
         %li= link_to "New Collection", new_collection_path
-      %li= link_to "Home", root_url
-      - Collection.roots.each do |collection|
-        %li= link_to collection.name, collection
+      %li= link_to "Home", root_url, id: ("highlight_root_collection" if request.original_url == root_url)
+      - if @collection
+        - Collection.roots.each do |collection|
+          %li= link_to collection.name, collection, id: ("highlight_root_collection" if @collection.root == collection)
+      -else
+        - Collection.roots.each do |collection|
+          %li= link_to collection.name, collection
+
 
 
 .container-fluid
