--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -47,6 +47,33 @@ body {
     border-left: 1px solid LightGray;
 }
 
+.panel-main {
+	img {
+		border-radius: 100%;
+		height: 50px;
+		// border: 3px solid white;
+	}
+	background: #337ab7;;
+	padding: 10px;
+	color: white;
+	font-size: 1.1em;
+	h4 {
+		margin: 0px;
+	}
+}
+
+.panel {
+	border-radius: 4px;
+	border: 1px solid #337ab7;
+}
+
+.panel-sub {
+	background: #f5f5f5;
+	color: #337ab7;
+	padding: 10px;
+
+}
+
 .btn-primary-text {
 	a {
 		color: white;
