--- a/app/views/items/_item_content.html.haml
+++ b/app/views/items/_item_content.html.haml
@@ -17,7 +17,7 @@
         %ul
           %h5.item-lists-header= "This paper addresses #{@item.lists.count} research questions"
           - @item.lists.each do |list|
-            %li= link_to list.title, list
+            %li= link_to list.title, list, class: ("strong" if list == @list)
 
   .col-xs-12
     .abstract
