--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -75,6 +75,8 @@
                         = "Harvardian"
                       - elsif curator.school == "Yale University" 
                         = "Yalie"
+                      - elsif curator.school == "MIT"
+                        = "MIT'er"
                       - else
                         = curator.school
                     %li= curator.position 
@@ -82,7 +84,7 @@
               .row
                 .col-xs-12
                   - if curator.lists.count > 1
-                    = "Helped write this and #{pluralize (curator.lists.count - 1), 'other'}"
+                    = "Helped write this and #{pluralize (curator.lists.count - 1), 'other entry'}"
                   - else
                     = "Helped write this entry"
     
