--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -26,7 +26,7 @@
       .overview
         .overview-heading
           %h4.overview-title
-            %i.fa.fa-newspaper-o
+            %i.fa.fa-comments-o
             Overview
         .overview-body
           = raw @list.description
