--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,6 +18,11 @@ body {
     position: relative;
 }
 
+em {
+	background: yellow;
+	font-style: normal;
+}
+
 .overlay {
 	position: absolute;
 	top: 0;
@@ -170,6 +175,7 @@ li {
 		width: 400px;
 		padding-left: 5px;
 	}
+
 }
 
 .highlight {
@@ -259,6 +265,10 @@ li {
         outline: none;
         background-color: #000 !important;
     }
+}
+
+.side-nav {
+	overflow-y: scroll;
 }
 
 .side-nav>li>ul {
@@ -828,6 +838,11 @@ li {
 	// position: relative;
 }
 
+#hits {
+	margin-left: 39px;
+	// margin-top: 25px;
+}
+
 // .abstract {
 // 	font-size: .9em;
 // }
@@ -1075,6 +1090,7 @@ li {
 	padding-bottom: 15px;
 	list-style-type: none;
 	margin-bottom: 15px;
+	color: #333;
 }
 
 // input[type=checkbox]
