--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -23,9 +23,12 @@
 /     = link_to @collection.name, @collection
 /     = "(#{@collection.lists.count})"
 
+
 .row
   .col-xs-12.list-feed
     %ul
+      %li
+        %h3 Click on a research question below to learn about it
       =render @collection.lists
       - @collection.children.each do |child|
         =render child.lists
