Add paper count to lists on collection#show

--- a/app/assets/javascripts/search.js.erb
+++ b/app/assets/javascripts/search.js.erb
@@ -56,7 +56,7 @@ function searchCallback(err, content) {
     html += '<a href="/lists/' + hit.objectID + '"> \
       <li class="feed-item"> \
         <div class="row"> \
-          <div class="col-xs-8 basic-info"> \
+          <div class="col-xs-12"> \
             <h5>' 
               + hit._highlightResult["title"]["value"] + 
             '</h5> \
