--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,8 +1,10 @@
 = link_to list_path(list, :collection => @collection) do
   %li.feed-item
     .row
-      .col-xs-8.basic-info
+      .col-xs-12
         %h5= list.title
+        .item-count.gray
+          = "#{list.items.count} recommended papers"
       /   %span.timestamp.gray= "Last updated #{time_ago_in_words(list.updated_at)} ago;"
       /   %span.item-count.gray=pluralize(list.items.count, 'paper')
       /   - list.tags.each do |tag|
