Add syllabus boolean to items

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1155,6 +1155,20 @@ li {
 	}
 }
 
+.syllabus {
+	font-size: .7em;
+	background: #81b71a;
+	color: white;
+	padding: 3px;
+	font-weight: bold;
+	border-radius: 3px;
+}
+#syllabus-explanation {
+	font-size: 1em;
+	font-weight: normal;
+	margin-top: 10px;
+}
+
 
 // .auth-button {
 // 	a {
