--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -57,7 +57,10 @@
               - @list.items.each do |item|
                 %tr.clickable-row{ "data-href" =>('/items/' + item.id.to_s) }
                   %td= item.year
-                  %td= link_to item.title, item, "data-remote" => "true"
+                  %td
+                    = link_to item.title, item, "data-remote" => "true"
+                    - if item.syllabus
+                      %span.syllabus= "ON A SYLLABUS"
                   %td= item.author
                   %td= item.journal
 
