Fix overlay on modals

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -1,13 +1,8 @@
 - provide(:title, @list.title)
 
-.overlay.hide
+/ .overlay.hide
 .recommendation-modal.hide
-
 .list-show
-  .item-modal.hide
-
-    / This is my time
-    / %button.ex click out
   .row
     .col-xs-12.list-title
       %h3= @list.title
