--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,9 @@
   %body
     / -flash.each do |key,value|
     /   = content_tag(:div, value, class: "alert alert-#{key}")
+    .overlay.hide
+    .item-modal.hide
+
     #wrapper  
       = render 'layouts/header'
       / # = debug(params) if Rails.env.development?
@@ -25,6 +28,7 @@
       / - flash.each do |key, value|
       /   = content_tag(:div, value.to_s, class: "alert alert-#{key}")
       #page-wrapper
+        / .overlay.hide
         .container-fluid#pagecontent
           .search
             #display
@@ -32,6 +36,7 @@
               :javascript
                 var $inputfield = $('#q');
                 var $hits = $('#hits');
+          
           = yield
     
     %footer.footer
