Add margin between sections on list#show

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -30,7 +30,7 @@
       %li.collection-instructions
         %h4
           %i.fa.fa-info-circle
-          Click on a research question below to learn about it
+          Get in on the action! Click on a research question below.
       =render @collection.lists
       - @collection.children.each do |child|
         =render child.lists
